# Dendro-KT

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
FEM/include/: cg_solver.hpp  coarseToFine.hpp  da_matvec.h  feMat.h  feMatrix.h  feVec.h  feVector.h  gmgMat.h  hybrid_mat_wrapper.hpp  intergridTransfer.h  lapac.h  matvec.h  mg.hpp  refel.h  setDiag.h  solver_utils.hpp  subset_amat.h  surrogate_cell_transfer.hpp  tensor.h
FEM/src/: basis.cpp  hybrid_mat_wrapper.cpp  refel.cpp  tensor.cpp  tensor_special_double.cpp  tensor_special_float.cpp  tensor_special_longlong.cpp
IO/gnuplot/: nodal_binary.gnu  raw_nodal_binary.sh
IO/hexlist/: json_hexlist.cpp  json_hexlist.h
airtight/: CMakeLists.txt
airtight/main/: tryConstruction.cpp  trySorting.cpp
bench/: CMakeLists.txt
bench/include/: matvec_bench.h  sendUtilization.h  tsort_bench.h
bench/slurm/: matvec_bench-chpc.sh  matvec_bench_adaptive-stampede2.sh  matvec_bench_channel-slurm-strong256_p1.sh  matvec_bench_channel-slurm-weak256_p1.sh  profile_matvec-slurm-chpc-weak-grain128K-a01-adaptive-np512.sh
bench/src/: da_vs_push_face_neighbor.cpp  genChannelPoints.cpp  matvec_bench.cpp  matvec_bench_adaptive.cpp  matvec_bench_channel.cpp  profile_matvec.cpp  sendUtilization.cpp  tsort_bench.cpp
debug/: comm_log.hpp
doctest/extensions/: mpi_reporter.h
dollar-master/: dollar.hpp
doxyFolder/: doxyFile
doxyFolder/html/: KDhcurvedata__decl_8h.html  KDhcurvedata__decl_8h_source.html  annotated.html  asyncExchangeContex_8h.html  asyncExchangeContex_8h_source.html  binUtils_8h.html  binUtils_8h_source.html  classPoint-members.html  classPoint.html  classbinOp_1_1TallBitMatrix-members.html  classbinOp_1_1TallBitMatrix.html  classdollar_1_1DollarStat-members.html  classdollar_1_1DollarStat.html  classes.html  classmemory__pool-members.html  classmemory__pool.html  classot_1_1AsyncExchangeContex-members.html  classot_1_1AsyncExchangeContex.html  classot_1_1DA-members.html  classot_1_1DA.html  classot_1_1DefaultSummary-members.html  classot_1_1DefaultSummary.html  classot_1_1DistTree-members.html  classot_1_1DistTree.html  classot_1_1Element-members.html  classot_1_1Element.html  classot_1_1Frame-members.html  classot_1_1Frame.html  classot_1_1Inputs.html  classot_1_1IterateNodesToChildren-members.html  classot_1_1IterateNodesToChildren.html  classot_1_1MatCompactRows-members.html  classot_1_1MatCompactRows.html  classot_1_1MatRecord-members.html  classot_1_1MatRecord.html  classot_1_1MatvecBase-members.html  (+315 more)
driver/: CMakeLists.txt  triangle_mesh.cpp
include/: KDhcurvedata_decl.h  PROXY_parUtils.h  PROXY_parUtils.tcc  SFC_Tree.h  TreeNode.h  TreeNode.tcc  asyncExchangeContex.h  binUtils.h  bitset_wrapper.hpp  comm_hierarchy.h  contextual_hyperface.hpp  corner_set.hpp  da_p2p.hpp  debug.hpp  dendro.h  distTree.h  dollar_par.hpp  dollar_stat.h  eleTreeIterator.h  ghost_exchange.hpp  hcurvedata.h  lazy.hpp  leaf_sets.hpp  lerp.hpp  mathUtils.h  mathUtils.tcc  matvec.h  matvec.tcc  matvecPreallocation.h  meshLoop.h  neighbor_sets.hpp  neighborhood.hpp  neighbors_to_nodes.hpp  nested_for.hpp  nodal_data.hpp  nsort.h  nsort.tcc  octUtils.h  octree_to_graph.hpp  oda.h  (+26 more)
masado/: traversal.py
matlab/: load_dbg.m
results/: out-job-3268034-node-c478-101.tsv  out-job-3269771-node-c506-002.tsv  out-job-3270485-node-c506-012.tsv  out-job-3271467-node-c506-011.tsv
savedata/: 2023-07-10-adaptive-cube-amg2.csv  2023-07-10-adaptive-cube.csv  2023-07-10-uniform-cube-gmg-and-hybrid.csv  2023-07-10-uniform-cube-gmg-and-hybrid.csv.bak  2023-07-10-uniform-cube-gmg-and-hybrid.filter-gmg  2023-07-10-uniform-cube-gmg-and-hybrid.filter-hybrid  2023-07-10-uniform-cube-gmg-and-hybrid.hdf5  2023-07-11-adaptive-cube.csv  2023-07-11-adaptive-cube.hdf5  2023-07-11-anisotropy-cube.csv  2023-07-11-anisotropy-cube.hdf5  2023-07-11-anisotropy-nonuniform-cube.csv  2023-07-11-anisotropy-nonuniform-cube.hdf5  anisotropic_vcycle_data.csv  anisotropic_vcycle_data.hdf5  hybrid_vcycle_data.hdf5
src/: KDhcurvedata.cpp  SFC_Tree.cpp  TreeNode.cpp  binUtils.cpp  comm_hierarchy.cpp  distTree.cpp  dollar_stat.cpp  hcurvedata.cpp  oda.cpp  p2p.cpp  parUtils.cpp  pcoord.cpp  point.cpp  treeNode.cpp  tsearchCmpx.cpp  tsort.cpp
test/: genRand4DPoints.h  testAdaptiveExamples.h  testAmat.cpp  testAmatMatvec.cpp  testBillionsOfElements.cpp  testBoundaryIndices.cpp  testBoundaryRefined.cpp  testCheckpoint.cpp  testConsistentElements.cpp  testConstruct.cpp  testCountCGNodes.cpp  testCreateRegularOctree.cpp  testDollar.cpp  testEleTreeIterator.cpp  testFunction2Octree.cpp  testGenerateGridHierarchy.cpp  testHCurveTable.cpp  testHangingBoundary.cpp  testHybridMatvecUniform.cpp  testIncidentGhostPoints.cpp  testIntergridSubda.cpp  testIntergridTransfer.cpp  testIntergridTransferCoarsen.cpp  testKeepSiblingLeafsTogether.cpp  testLocGlobSz.cpp  testMatvec.cpp  testMatvecNoAccumulate.cpp  testMeshLoop.cpp  testMovingBall.cpp  testODA.cpp  testPartition.cpp  testPeriodicSphereStatic.cpp  testPeriodicUniformNodes.cpp  testPoissonOperator.cpp  testProduceHangingSubda.cpp  testRefineSubda.cpp  testRemesh.cpp  testRestriction.cpp  testSFCTreeLoop.cpp  testScatterMap.cpp  (+13 more)
test_doctests/: CMakeLists.txt  binary_search.cpp  coarsening.cpp  compare_da.cpp  constructors.hpp  copy-assets.cmake  cpp17.cpp  da_p2p_matvec.cpp  directories.h.in  hello_world.cpp  hybrid_poisson.cpp  interval_proximity.cpp  lib_tests.cpp  main_with_petsc.cpp  octree_adler32.cpp  partition_unweighted.cpp  partition_weighted.cpp  refine_many.cpp
test_doctests/assets/: boxes.hexlist  child_of_neighbor_connected.hexlist  coarsen_all+child_of_neighbor_connected.hexlist  coarsen_all+grandchildren_of_neighbor_connected.hexlist  coarsen_all+grandchildren_of_neighbor_disconnected.hexlist  coarsen_all+grandchildren_of_neighbor_of_sibling_disconnected.hexlist  grandchildren_of_neighbor_connected.hexlist  grandchildren_of_neighbor_disconnected.hexlist  grandchildren_of_neighbor_of_sibling_disconnected.hexlist  tiny2d.hexlist  tiny3d.hexlist
utility/: CMakeLists.txt  cat_hexlist.py  treesort-hexlist.cpp
(+83 files in other folders)
